--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "@notionkiller/shared": "workspace:*",
     "@nuxt/ui": "^2.19.2",
+    "@vueuse/motion": "^2.2.6",
+    "marked": "^15.0.2",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
