--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@notionkiller/shared",
-  "private": true,
-  "version": "1.0.0",
   "type": "module",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "latest",
+    "bun-types": "latest"
   }
 }
