--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "dev:frontend": "cd apps/frontend && bun dev",
     "dev:backend": "cd apps/backend && bun dev",
-    "build:shared": "cd apps/shared && bun build"
+    "build:shared": "bun run --cwd apps/shared build"
   }
 }
