--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,13 +12,19 @@
   "dependencies": {
     "@notionkiller/shared": "workspace:*",
     "@nuxt/ui": "^2.19.2",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/markdown-it": "^14.1.2",
+    "@vueuse/core": "^11.3.0",
     "@vueuse/motion": "^2.2.6",
+    "dompurify": "^3.2.1",
+    "markdown-it": "^14.1.0",
     "marked": "^15.0.2",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
