--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "markdown-it": "^14.1.0",
     "marked": "^15.0.2",
     "nuxt": "^3.14.1592",
+    "prettier": "^3.3.3",
     "vue": "latest",
     "vue-router": "latest"
   },
