--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "dev:frontend": "cd apps/frontend && bun dev",
     "dev:backend": "cd apps/backend && bun dev",
     "build:shared": "bun run --cwd apps/shared build"
+  },
+  "dependencies": {
+    "prettier": "^3.3.3"
   }
 }
