--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "clean": "rm -rf node_modules dist .nuxt",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@notionkiller/shared": "workspace:*",
@@ -17,6 +19,7 @@
     "@vueuse/core": "^11.3.0",
     "@vueuse/motion": "^2.2.6",
     "dompurify": "^3.2.1",
+    "jszip": "^3.10.1",
     "markdown-it": "^14.1.0",
     "marked": "^15.0.2",
     "nuxt": "^3.14.1592",
@@ -26,8 +29,10 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.2.0",
+    "@vitejs/plugin-vue": "^5.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.4.11"
   }
 }
